# sml-compiler

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  benchmark.py  gen.py  scratch.sml  test.sml
book/: book.toml
crates/sml-core/: Cargo.toml
crates/sml-core/src/: alpha.rs  arenas.rs  check.rs  core_pp.rs  decision.rs  elaborate.rs  lib.rs  linearize.rs  lower.rs  match_compile.rs  mono.rs  monomorphize.rs  pretty_print.rs  rename.rs  type_check.rs  types.rs  visit.rs
crates/sml-core/src/builtin/: constructors.rs  mod.rs  tycons.rs
crates/sml-core/src/check/: mod.rs
crates/sml-core/src/elaborate/: decision.rs  env.rs  exprs.rs  mod.rs  pats.rs  prec.rs  stack.rs  types.rs
crates/sml-core/src/inference/: mod.rs
crates/sml-core/src/pretty_print/: core.rs  mod.rs
crates/sml-driver/: Cargo.toml
crates/sml-driver/src/: compiler.rs  config.rs  main.rs
crates/sml-driver/tests/: integration.rs
crates/sml-frontend/: Cargo.toml
crates/sml-ir/: Cargo.toml
crates/sml-util/: Cargo.toml
tests/elaboration/: duplicate.sml  local_decl.sml  nested_local.sml  rebind.sml
tests/match_compile/: inexhaustive.sml  merge.sml  preflight.sml  redundant.sml  val_bind.sml  val_bind2.sml  wildcard.sml
tests/mono/: simple.sml
tests/parser/: decls.sml  empty.sml  gen.py  long.sml  toplevel.sml  unfinished.sml
tests/typecheck/: cantunify.sml  cyclic.sml  escape.sml  escape_local.sml  exception.sml  flex_fail.sml  flex_gen.sml  flex_pass.sml  flex_pat.sml  mutual_recursion.sml  peano.sml  records.sml  selector_fail.sml  selector_pass.sml  value_res.sml
(+19 files in other folders)
