[package]
name = "sml-core"
version = "0.1.0"
authors = ["Michael Lazear <lazear@scripps.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0"
rustc-hash = "1.1.0"

[dependencies.sml-frontend]
path = "../sml-frontend"

[dependencies.sml-util]
path = "../sml-util"