[package]
name = "sml-driver"
version = "0.1.0"
authors = ["Michael Lazear <lazear@scripps.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sml-core]
path = "../sml-core"

[dependencies.sml-frontend]
path = "../sml-frontend"

[dependencies.sml-util]
path = "../sml-util"

[dependencies.stats_alloc]
version = "0.1.8"

[dev-dependencies.goldentests]
version = "0.3.5"